--- a/application/views/error/error.phtml
+++ b/application/views/error/error.phtml
@@ -9,7 +9,7 @@
 <!--<![endif]-->
 <!-- start: HEAD -->
 <head>
-    <title>MySeat</title>
+    <title>404</title>
     <!-- start: META -->
     <meta charset="utf-8"/>
     <!--[if IE]>
@@ -69,7 +69,7 @@
                     Check the URL you entered for any mistakes and try again.
                     <br>
                     <a href="/" class="btn btn-teal btn-return">
-                        Return home
+                    Retour
                     </a>
                     <br>
                     Still no luck?
@@ -77,15 +77,7 @@
                     Search for whatever is missing, or take a look around the rest of our site.
                 </p>
 
-                <form action="#">
-                    <div class="input-group">
-                        <input type="text" placeholder="keyword..." size="16" class="form-control">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-teal">
-                                        Search
-                                    </button> </span>
-                    </div>
-                </form>
+
             </div>
         </div>
         <!-- end: 404 -->
