--- a/application/views/test/index.phtml
+++ b/application/views/test/index.phtml
@@ -2,7 +2,7 @@
 
 ?>
 <ul class="breadcrumb">
-    <li class="active">Please read the following steps ...</li>
+    <li class="active">Veuillez lire les étapes suivantes pour participer aux lotteries</li>
 </ul>
 
 <div class="row">
