--- a/application/views/newbackend.phtml
+++ b/application/views/newbackend.phtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/backend/assets/css/main-new.css">
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="backend/assets/js/administration-autoform.js"></script>
 
 
 </head>
@@ -34,13 +35,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Counter-Strike : GO</a>
+                <a class="navbar-brand" href="/">QUI VEUT GAGNER DES SKINS ?</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="/Lottery">Lottery</a></li>
-                    <li><a href="/Returns">Returns</a></li>
+                    <li class=""><a href="/Lottery"><i class="fa fa-ticket icon-navbar"></i>Lotteries</a></li>
+                    <li><a href="/Returns"><i class="fa fa-gift icon-navbar"></i>Récompenses</a></li>
                     <?php
 
                           if (isset($session->steamid)) {
@@ -48,7 +49,7 @@
                             if($session->steam_steamid == "76561198078265100")
                             {
                                 ?>
-                                  <li><a href="/Administration">Administration</a></li>
+                                  <li><a href="/Administration"><i class="fa fa-cog icon-navbar"></i>Administration</a></li>
                                 <?php
                             }
 
@@ -78,7 +79,7 @@
                        <?php
                             $url = $session-> steam_avatar;
                             $clean = strtok($url, '\\');
-                            echo "<img src=\"".$clean."\" class=\"avatar\" />";
+                            echo "<img src=\"".$clean."\" class=\"avatar img-circle\" />";
                        ?>
                     </li>
                     <?php
