--- a/public/backend/assets/css/main-new.css
+++ b/public/backend/assets/css/main-new.css
@@ -4,7 +4,7 @@
     background: transparent none repeat scroll 0% 0% !important;
     padding-top: 12px !important;
     padding-bottom: 12px !important;
-    color: rgb(255, 255, 255) !important;
+    color: #999999 !important;
     line-height: 21px;
     position: relative;
     display: block;
@@ -12,13 +12,10 @@
 
 
 }
-.navbar-default .navbar-nav > li:hover {
-    color: #FFF !important;
-    background-color: #272727 !important;
-}
+
 .avatar
 {
-    margin-top:6px;
+    margin-top:8px;
 }
 .main-content
 {
@@ -38,4 +35,260 @@
 .label_lottery
 {
     font-weight: bold;
+}
+.icon-navbar
+{
+    margin-right:5px;
+}
+.card {
+    position: relative;
+    display: block;
+    margin-bottom: .75rem;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: .25rem;
+}
+
+.card-block {
+    padding: 1.25rem;
+}
+
+.card-title {
+    margin-bottom: .75rem;
+}
+
+.card-subtitle {
+    margin-top: -.375rem;
+    margin-bottom: 0;
+}
+
+.card-text:last-child {
+    margin-bottom: 0;
+}
+
+.card-link:hover {
+    text-decoration: none;
+}
+
+.card-link + .card-link {
+    margin-left: 1.25rem;
+}
+
+.card > .list-group:first-child .list-group-item:first-child {
+    border-radius: .25rem .25rem 0 0;
+}
+
+.card > .list-group:last-child .list-group-item:last-child {
+    border-radius: 0 0 .25rem .25rem;
+}
+
+.card-header {
+    padding: .75rem 1.25rem;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.card-header:first-child {
+    border-radius: .25rem .25rem 0 0;
+}
+
+.card-footer {
+    padding: .75rem 1.25rem;
+    background-color: #f5f5f5;
+    border-top: 1px solid #e5e5e5;
+}
+
+.card-footer:last-child {
+    border-radius: 0 0 .25rem .25rem;
+}
+
+.card-primary {
+    background-color: #0275d8;
+    border-color: #0275d8;
+}
+
+.card-success {
+    background-color: #5cb85c;
+    border-color: #5cb85c;
+}
+
+.card-info {
+    background-color: #5bc0de;
+    border-color: #5bc0de;
+}
+
+.card-warning {
+    background-color: #f0ad4e;
+    border-color: #f0ad4e;
+}
+
+.card-danger {
+    background-color: #d9534f;
+    border-color: #d9534f;
+}
+
+.card-primary-outline {
+    background-color: transparent;
+    border-color: #0275d8;
+}
+
+.card-secondary-outline {
+    background-color: transparent;
+    border-color: #ccc;
+}
+
+.card-info-outline {
+    background-color: transparent;
+    border-color: #5bc0de;
+}
+
+.card-success-outline {
+    background-color: transparent;
+    border-color: #5cb85c;
+}
+
+.card-warning-outline {
+    background-color: transparent;
+    border-color: #f0ad4e;
+}
+
+.card-danger-outline {
+    background-color: transparent;
+    border-color: #d9534f;
+}
+
+.card-inverse .card-header,
+.card-inverse .card-footer {
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+
+.card-inverse .card-header,
+.card-inverse .card-footer,
+.card-inverse .card-title,
+.card-inverse .card-blockquote {
+    color: #fff;
+}
+
+.card-inverse .card-link,
+.card-inverse .card-text,
+.card-inverse .card-blockquote > footer {
+    color: rgba(255, 255, 255, .65);
+}
+
+.card-inverse .card-link:focus, .card-inverse .card-link:hover {
+    color: #fff;
+}
+
+.card-blockquote {
+    padding: 0;
+    margin-bottom: 0;
+    border-left: 0;
+}
+
+.card-img {
+    border-radius: .25rem;
+}
+
+.card-img-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1.25rem;
+}
+
+.card-img-top {
+    border-radius: .25rem .25rem 0 0;
+}
+
+.card-img-bottom {
+    border-radius: 0 0 .25rem .25rem;
+}
+
+@media (min-width: 544px) {
+    .card-deck {
+        display: table;
+        table-layout: fixed;
+        border-spacing: 1.25rem 0;
+    }
+    .card-deck .card {
+        display: table-cell;
+        width: 1%;
+        vertical-align: top;
+    }
+    .card-deck-wrapper {
+        margin-right: -1.25rem;
+        margin-left: -1.25rem;
+    }
+}
+
+@media (min-width: 544px) {
+    .card-group {
+        display: table;
+        width: 100%;
+        table-layout: fixed;
+    }
+    .card-group .card {
+        display: table-cell;
+        vertical-align: top;
+    }
+    .card-group .card + .card {
+        margin-left: 0;
+        border-left: 0;
+    }
+    .card-group .card:first-child {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+    .card-group .card:first-child .card-img-top {
+        border-top-right-radius: 0;
+    }
+    .card-group .card:first-child .card-img-bottom {
+        border-bottom-right-radius: 0;
+    }
+    .card-group .card:last-child {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+    .card-group .card:last-child .card-img-top {
+        border-top-left-radius: 0;
+    }
+    .card-group .card:last-child .card-img-bottom {
+        border-bottom-left-radius: 0;
+    }
+    .card-group .card:not(:first-child):not(:last-child) {
+        border-radius: 0;
+    }
+    .card-group .card:not(:first-child):not(:last-child) .card-img-top,
+    .card-group .card:not(:first-child):not(:last-child) .card-img-bottom {
+        border-radius: 0;
+    }
+}
+
+@media (min-width: 544px) {
+    .card-columns {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+        -webkit-column-gap: 1.25rem;
+        -moz-column-gap: 1.25rem;
+        column-gap: 1.25rem;
+    }
+    .card-columns .card {
+        display: inline-block;
+        width: 100%;
+    }
+}
+.colonne
+{
+    text-align: center;
+}
+.list-lotterie
+{
+    font-weight: bold;
+}
+.weapon_img
+{
+    width:50%;
 }
