Add security on admin

--- a/application/views/newbackend.phtml
+++ b/application/views/newbackend.phtml
@@ -46,7 +46,7 @@
 
                           if (isset($session->steamid)) {
 
-                            if($session->steam_steamid == "76561198078265100")
+                            if($session->steam_steamid == "76561198078265100" || $session->steam_steamid == "76561198041856215")
                             {
                                 ?>
                                   <li><a href="/Administration"><i class="fa fa-cog icon-navbar"></i>Administration</a></li>
