--- a/application/views/administration/index.phtml
+++ b/application/views/administration/index.phtml
@@ -6,7 +6,7 @@ $items = json_decode(
 );
 
 ?>
-<legend>Add a lottery</legend>
+<legend>Ajouter une lotterie</legend>
 
 <div class="row">
 
@@ -134,7 +134,7 @@ $items = json_decode(
 
 
 </div>
-<legend>Remove a lottery</legend>
+<legend>Supprimer une lotterie</legend>
 
 <div class="row">
 
@@ -190,7 +190,7 @@ $items = json_decode(
     </div>
 
 </div>
-<legend>Claims report</legend>
+<legend>Rapport des réclamations</legend>
 
 <div class="row">
 
