--- a/application/views/error/error.phtml
+++ b/application/views/error/error.phtml
@@ -9,7 +9,7 @@
 <!--<![endif]-->
 <!-- start: HEAD -->
 <head>
-    <title>404</title>
+    <title>QVGDS - 404</title>
     <!-- start: META -->
     <meta charset="utf-8"/>
     <!--[if IE]>
@@ -59,22 +59,15 @@
                 404
             </div>
             <div class="error-details col-sm-6 col-sm-offset-3">
-                <h3>Oops! You are stuck at 404</h3>
+                <h3>Vous avez rencontré une erreur 404 !</h3>
 
                 <p>
-                    Unfortunately the page you were looking for could not be found.
-                    <br>
-                    It may be temporarily unavailable, moved or no longer exist.
-                    <br>
-                    Check the URL you entered for any mistakes and try again.
+                    La page que vous tenté d'accéder n'existe pas.
                     <br>
                     <a href="/" class="btn btn-teal btn-return">
                     Retour
                     </a>
-                    <br>
-                    Still no luck?
-                    <br>
-                    Search for whatever is missing, or take a look around the rest of our site.
+
                 </p>
 
 
