--- a/application/views/test/index.phtml
+++ b/application/views/test/index.phtml
@@ -2,40 +2,46 @@
 
 ?>
 <ul class="breadcrumb">
-    <li class="active">Veuillez lire les étapes suivantes pour participer aux lotteries</li>
+    <li class="active"><i class="fa fa-exclamation-triangle"></i> Veuillez lire les étapes suivantes pour participer aux lotteries</li>
 </ul>
 
 <div class="row">
 
-    <div class="col-md-4">
+    <div class="col-md-12">
 
         <div class="panel panel-default">
-            <div class="panel-heading"># STEP 1</div>
+            <div class="panel-heading"><i class="fa fa-hand-paper-o"></i> Étape 1</div>
             <div class="panel-body">
                 <i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales urna tortor, in sollicitudin odio finibus et. Aenean nec nisl ultricies, condimentum tortor at, consectetur mauris. Vestibulum sit amet eros dui. Aenean maximus lacus id metus aliquam condimentum non non quam. Vivamus euismod eget nunc quis ultricies. Donec rutrum eget nisi nec sagittis. Praesent congue odio a erat consectetur, et mattis urna imperdiet. Morbi ac mauris id metus mattis aliquam et ac lacus. Praesent vel lectus a urna ornare faucibus eget eget nisl. Aliquam fermentum lorem ac magna commodo aliquet.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elit nisl, scelerisque at nunc laoreet, aliquam interdum elit. Vestibulum bibendum erat vel blandit tristique. Pellentesque tincidunt pellentesque lorem, in consequat nisl cursus nec. Suspendisse eu convallis dui, ut eleifend nunc. Phasellus id est id risus consectetur vestibulum. Morbi sit amet nunc vitae tellus blandit pretium. Donec vehicula tortor ut nibh hendrerit, in egestas libero egestas. Praesent aliquam elit sed massa consequat, laoreet pretium neque pulvinar. Nam lorem tortor, placerat sed finibus quis, imperdiet at nunc.
+
+                Integer nec lacus vitae nibh volutpat vestibulum. Aliquam erat volutpat. Nullam enim enim, consequat quis metus eu, laoreet pretium sem. Ut vel mauris turpis. Praesent in sapien vel tortor posuere laoreet in a mauris. Phasellus viverra dignissim tortor, in hendrerit purus blandit vitae. Aenean id dictum sem. Donec imperdiet porttitor fringilla. Suspendisse maximus iaculis enim. Integer id ornare dolor. Nulla elementum leo sed auctor maximus. Mauris iaculis neque ex, vitae molestie nibh rhoncus eu. Phasellus eu sollicitudin turpis. Praesent vel rhoncus ante, sed fermentum elit. Quisque vel sem egestas, maximus lacus a, pulvinar massa.
             </div>
         </div>
 
     </div>
-    <div class="col-md-4">
+    <div class="col-md-12">
 
         <div class="panel panel-default">
-            <div class="panel-heading"># STEP 2</div>
+            <div class="panel-heading"><i class="fa fa-beer"></i> Étape 2</div>
             <div class="panel-body" style="text-align:right;">
                 <i class="fa fa-quote-right fa-3x fa-pull-right fa-border"></i>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales urna tortor, in sollicitudin odio finibus et. Aenean nec nisl ultricies, condimentum tortor at, consectetur mauris. Vestibulum sit amet eros dui. Aenean maximus lacus id metus aliquam condimentum non non quam. Vivamus euismod eget nunc quis ultricies. Donec rutrum eget nisi nec sagittis. Praesent congue odio a erat consectetur, et mattis urna imperdiet. Morbi ac mauris id metus mattis aliquam et ac lacus. Praesent vel lectus a urna ornare faucibus eget eget nisl. Aliquam fermentum lorem ac magna commodo aliquet.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elit nisl, scelerisque at nunc laoreet, aliquam interdum elit. Vestibulum bibendum erat vel blandit tristique. Pellentesque tincidunt pellentesque lorem, in consequat nisl cursus nec. Suspendisse eu convallis dui, ut eleifend nunc. Phasellus id est id risus consectetur vestibulum. Morbi sit amet nunc vitae tellus blandit pretium. Donec vehicula tortor ut nibh hendrerit, in egestas libero egestas. Praesent aliquam elit sed massa consequat, laoreet pretium neque pulvinar. Nam lorem tortor, placerat sed finibus quis, imperdiet at nunc.
+
+                Integer nec lacus vitae nibh volutpat vestibulum. Aliquam erat volutpat. Nullam enim enim, consequat quis metus eu, laoreet pretium sem. Ut vel mauris turpis. Praesent in sapien vel tortor posuere laoreet in a mauris. Phasellus viverra dignissim tortor, in hendrerit purus blandit vitae. Aenean id dictum sem. Donec imperdiet porttitor fringilla. Suspendisse maximus iaculis enim. Integer id ornare dolor. Nulla elementum leo sed auctor maximus. Mauris iaculis neque ex, vitae molestie nibh rhoncus eu. Phasellus eu sollicitudin turpis. Praesent vel rhoncus ante, sed fermentum elit. Quisque vel sem egestas, maximus lacus a, pulvinar massa.
             </div>
         </div>
 
     </div>
-    <div class="col-md-4">
+    <div class="col-md-12">
 
         <div class="panel panel-default">
-            <div class="panel-heading"># STEP 3</div>
+            <div class="panel-heading"><i class="fa fa-stop"></i> Étape 3</div>
             <div class="panel-body">
                 <i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales urna tortor, in sollicitudin odio finibus et. Aenean nec nisl ultricies, condimentum tortor at, consectetur mauris. Vestibulum sit amet eros dui. Aenean maximus lacus id metus aliquam condimentum non non quam. Vivamus euismod eget nunc quis ultricies. Donec rutrum eget nisi nec sagittis. Praesent congue odio a erat consectetur, et mattis urna imperdiet. Morbi ac mauris id metus mattis aliquam et ac lacus. Praesent vel lectus a urna ornare faucibus eget eget nisl. Aliquam fermentum lorem ac magna commodo aliquet.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elit nisl, scelerisque at nunc laoreet, aliquam interdum elit. Vestibulum bibendum erat vel blandit tristique. Pellentesque tincidunt pellentesque lorem, in consequat nisl cursus nec. Suspendisse eu convallis dui, ut eleifend nunc. Phasellus id est id risus consectetur vestibulum. Morbi sit amet nunc vitae tellus blandit pretium. Donec vehicula tortor ut nibh hendrerit, in egestas libero egestas. Praesent aliquam elit sed massa consequat, laoreet pretium neque pulvinar. Nam lorem tortor, placerat sed finibus quis, imperdiet at nunc.
+
+                Integer nec lacus vitae nibh volutpat vestibulum. Aliquam erat volutpat. Nullam enim enim, consequat quis metus eu, laoreet pretium sem. Ut vel mauris turpis. Praesent in sapien vel tortor posuere laoreet in a mauris. Phasellus viverra dignissim tortor, in hendrerit purus blandit vitae. Aenean id dictum sem. Donec imperdiet porttitor fringilla. Suspendisse maximus iaculis enim. Integer id ornare dolor. Nulla elementum leo sed auctor maximus. Mauris iaculis neque ex, vitae molestie nibh rhoncus eu. Phasellus eu sollicitudin turpis. Praesent vel rhoncus ante, sed fermentum elit. Quisque vel sem egestas, maximus lacus a, pulvinar massa.
             </div>
         </div>
 
