--- a/application/views/lottery/index.phtml
+++ b/application/views/lottery/index.phtml
@@ -13,7 +13,7 @@ include('backend/assets/plugins/steamauth/userInfo.php');
 
     <div class="card text-xs-center">
         <div class="card-header">
-          <span class="list-lotterie">Lotterie #</span><?php echo $lottery->sub_id ?>
+          <span class="list-lotterie">Loterie #</span><?php echo $lottery->sub_id ?>
 
         </div>
 
