--- a/application/views/newbackend.phtml
+++ b/application/views/newbackend.phtml
@@ -40,7 +40,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="/Lottery"><i class="fa fa-ticket icon-navbar"></i>Lotteries</a></li>
+                    <li class=""><a href="/Lottery"><i class="fa fa-ticket icon-navbar"></i>Loteries</a></li>
                     <li><a href="/Returns"><i class="fa fa-gift icon-navbar"></i>Récompenses</a></li>
                     <?php
 
