--- a/application/views/test/index.phtml
+++ b/application/views/test/index.phtml
@@ -2,7 +2,7 @@
 
 ?>
 <ul class="breadcrumb">
-    <li class="active"><i class="fa fa-exclamation-triangle"></i> Veuillez lire les étapes suivantes pour participer aux lotteries</li>
+    <li class="active"><i class="fa fa-exclamation-triangle"></i> Veuillez lire les étapes suivantes pour participer aux loteries</li>
 </ul>
 
 <div class="row">
