--- a/application/views/returns/index.phtml
+++ b/application/views/returns/index.phtml
@@ -7,8 +7,8 @@ include('backend/assets/plugins/steamauth/userInfo.php');
     <table class="table table-striped table-hover ">
         <thead>
         <tr>
-            <th>Référence de la lotterie</th>
-            <th>Gagnant de la lotterie</th>
+            <th>Référence de la loterie</th>
+            <th>Gagnant de la loterie</th>
             <th>Prix remporté</th>
             <?php
             if (isset($session->steamid)) {
